SF Primes/src/objects/AccountReLinkObject__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A list of objects to be processed by the Account Relink batch process. Records removed from this List will cause the related object to be skipped (not processed).</description>
    <fields>
        <fullName>Account_Field__c</fullName>
        <label>Account Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Relationship_Name__c</fullName>
        <label>Account Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>This is the action that will be preformed on the matched record. Options are: Update or Clone.</description>
        <inlineHelpText>This is the action that will be preformed on the matched record. Options are: Update or Clone.</inlineHelpText>
        <label>Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_1__c</fullName>
        <label>Conditions 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conditions_2__c</fullName>
        <label>Conditions 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <description>The necessary fields to query. This should include Account ID (usually AccountId or Account__c), Owner ID (OwnerId), and Owner Name (Owner.Name) if these fields exist on the object.</description>
        <inlineHelpText>The necessary fields to query. This should include Account ID (usually AccountId or Account__c), Owner ID (OwnerId), and Owner Name (Owner.Name) if these fields exist on the object.</inlineHelpText>
        <label>Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limit_Per_Day__c</fullName>
        <label>Limit Per Day</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order in which to process the objects.</description>
        <inlineHelpText>The order in which to process the objects.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account ReLink Object</label>
</CustomObject>